cabal-version:      2.4
name:               trace-usage
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Vladislav Zavialov
maintainer:         Vladislav Zavialov <vlad.z.4096@gmail.com>
category:           Development
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    exposed-modules:  Debug.Trace.Usage
    build-depends:
        base ^>=4.14.3.0,
        pretty ^>=1.1.3.6,
        containers ^>=0.6.5.1,
        trie-simple ^>=0.4.1.1
    default-language: Haskell2010
    default-extensions:
      TypeApplications,
      ScopedTypeVariables,
      DerivingStrategies
